--- a/style.css
+++ b/style.css
@@ -1,37 +1,103 @@
-html,
-body {
-    height: 100%;
-    width: 100%;
-}
-
-#container {
-    margin: auto;
-}
-
-#poke-container {
-    margin: auto;
-    width: 90%;
-    padding: 10px;
-}
-
-#header-container {
-    border-radius: 0px !important;
-}
-
-#header-text {
-    margin: 0 auto;
-}
-
-#generate-pokemon {
-    margin: 0 auto;
-}
-
-#delete-btn {
-    position: absolute;
-    left: 85%;
-    display: none;
-    margin-bottom: 5%;
-}
-
-
-
+ html,
+    body {
+        height: 100%;
+        width: 100%;
+        background-image: url(pokemon.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    
+    .region-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 100vh;
+        border-radius: 25px;
+        padding: 10px;
+        margin: 20px;
+    }
+    
+    .region-button {
+        padding: 5px;
+        height: 100%;
+        max-height: 50px;
+        width: 100%;
+        max-width: 100px;
+    }
+    
+    button {
+        background-color: white;
+        text-align: center;
+        display: block;
+    }
+    
+    #main-navbar #active-link {
+        text-decoration: line-through;
+        color: white;
+    }
+    
+    #hamburger-menu {
+        top: 0px;
+        width: 100%;
+        position: fixed;
+        background-color: #d04d07;
+        z-index: 10;
+        padding-bottom: 10px;
+        padding-top: 10px;
+    }
+    
+    #main-navbar {
+        display: none;
+        padding: 10px 20px;
+        border-top: 1px solid #f00909;
+        background-position: center;
+        background-size: 80%;
+        background-repeat: no-repeat;
+    }
+    
+    #main-navbar li {
+        margin: 10px 0px;
+        padding: 10px 0px;
+        border-bottom: 1px solid #f00909;
+        list-style: none;
+    }
+    
+    #main-navbar li a {
+        color: #731313;
+        text-decoration: none;
+        font-size: 1.4rem;
+    }
+    
+    #main-navbar li a:hover {
+        color: white;
+        transition: .3s ease-in;
+    }
+    
+    .line1,
+    .line2,
+    .line3 {
+        width: 24px;
+        height: 3px;
+        background-color: #ab0b0b;
+        margin: 0px 0px 4px 10px;
+    }
+    
+    .line1.active {
+        transform: rotate(-45deg) translate(-5px, 5px);
+    }
+    
+    .line2.active {
+        opacity: 0;
+    }
+    
+    .line3.active {
+        transform: rotate(45deg) translate(-5px, -5px);
+    }
+    
+    #main-navbar.menu-active {
+        display: block;
+        height: 100vh;
+        animation-name: drop-menu-animation;
+        animation-delay: 0s;
+        animation-duration: 0.5s;
+    }
