--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     body {
         height: 100%;
         width: 100%;
-        background-image: url("/assets/imgages/pokemon.JPG");
+        background-image: url("assets/imgages/pokemon.JPG");
         background-repeat: no-repeat;
         background-size: cover;
     }
