--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     body {
         height: 100%;
         width: 100%;
-        background-image: url("/docs/assets/images/pokemon.jpg");
+        background-image: url("./docs/assets/images/pokemon.jpg");
         background-repeat: no-repeat;
         background-size: cover;
     }
