--- a/style.css
+++ b/style.css
@@ -101,3 +101,77 @@
         animation-delay: 0s;
         animation-duration: 0.5s;
     }
+
+
+
+/* Style for the card container */
+
+.card-container {
+    background-color: #f7f7f7;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    display: block;
+    justify-content: center;
+    gap: 20px;
+}
+
+
+/* Style for the individual card */
+
+.card {
+    background-color: #f07f7f;
+    border: 1px solid #0c0c0c;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    grid-template-columns: repeat(4, minmax(150px, 300px));
+    display: grid;
+}
+
+.card:hover {
+    transform: scale(1.02);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+/* Style for the pokemon image */
+
+.card-img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    margin: 20px auto;
+    display: block;
+}
+
+
+/* Style for the card title */
+
+.card-title {
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: capitalize;
+    color: #333;
+    text-align: center;
+    margin-top: 10px;
+}
+
+
+/* Style for the card text */
+
+.card-text {
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+
+/* Style for the card body */
+
+.card-body {
+    padding: 10px;
+    text-align: center;
+}
