--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
     html,
     body {
-        height: 100%;
+        min-height: 100%;
         width: 100%;
         background-image: url("docs/assets/images/pokemon.jpg");
         background-repeat: no-repeat;
