--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
       }
       
       .bg-image {
-          background-image: url(url("docs/assets/images/pokemon.jpg");
+          background-image: url("docs/assets/images/pokemon.jpg");
           background-repeat: no-repeat;
           background-size: cover;
       }
