--- a/style.css
+++ b/style.css
@@ -9,371 +9,358 @@
           background-size: cover;
       }
       
-     .container {
-          max-width: 100%;
-          margin: 0 auto;
-          padding: 0 20px;
-      }
-      
-      .region-container {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          height: 100vh;
-          border-radius: 25px;
-          padding: px;
-          margin: 50px auto;
-      }
-      
-      .region-button {
-          padding: 10px;
-          height: 40px;
-          width: 120px;
-          border: 2px solid #ffcb05;
-          border-radius: 30px;
-          background-color: #fff;
-          color: #ffcb05;
-          font-weight: bold;
-          font-size: 16px;
-          text-transform: uppercase;
-          transition: all 0.3s ease-in-out;
-      }
-      
-      .region-button:hover {
-          background-color: #ffcb05;
-          color: #fff;
-      }
-      
-      .region {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          margin: 20px;
-          position: relative;
-      }
-      
-      .region img {
-          width: 80px;
-          height: 80px;
-          border-radius: 50%;
-          margin-bottom: 10px;
-          cursor: pointer;
-          transition: all 0.3s ease-in-out;
-      }
-      
-      .region img:hover {
-          transform: scale(1.2);
-      }
-      
-      #main-navbar #active-link {
-          color: white;
-      }
-      
-      #hamburger-menu {
-          top: 0px;
-          width: 100%;
-          position: fixed;
-          background-color: #d04d07;
-          z-index: 10;
-          padding-bottom: 10px;
-          padding-top: 10px;
-      }
-      
-      #main-navbar {
-          display: none;
-          padding: 10px 20px;
-          border-top: 1px solid #bb0b0b;
-          background-position: center;
-          background-size: 80%;
-          background-repeat: no-repeat;
-      }
-      
-      #main-navbar li {
-          margin: 10px 0px;
-          padding: 10px 0px;
-          border-bottom: 1px solid #f00909;
-          list-style: none;
-      }
-      
-      #main-navbar li a {
-          color: #731313;
-          text-decoration: none;
-          font-size: 1.4rem;
-      }
-      
-      #main-navbar li a:hover {
-          color: white;
-          transition: .3s ease-in;
-      }
-      
-      .line1,
-      .line2,
-      .line3 {
-          width: 24px;
-          height: 3px;
-          background-color: #ab0b0b;
-          margin: 0px 0px 4px 10px;
-      }
-      
-      .line1.active {
-          transform: rotate(-45deg) translate(-5px, 5px);
-      }
-      
-      .line2.active {
-          opacity: 0;
-      }
-      
-      .line3.active {
-          transform: rotate(45deg) translate(-5px, -5px);
-      }
-      
-      #main-navbar.menu-active {
-          display: block;
-          height: 100vh;
-          animation-name: drop-menu-animation;
-          animation-delay: 0s;
-          animation-duration: 0.5s;
-      }
-      /* Style for the card container */
-      
-      .ui.cards {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: center;
-      }
-      
-      .card-container {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          margin: 20px;
-      }
-      
-      .card-content {
-          align-items: center;
-          justify-content: center;
-          text-align: center;
-          background-color: #f5f5f5;
-          border: 1px solid #000;
-          border-radius: 10px;
-          width: 300px;
-          height: 420px;
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-          position: relative;
-          overflow: hidden;
-      }
-      
-      .card-content img {
-          width: 150px;
-          height: 150px;
-          margin: 20px auto;
-          display: block;
-          position: relative;
-          z-index: 1;
-      }
-      
-      .card-info {
-          position: absolute;
-          left: 25px;
-          right: 25px;
-          color: #000;
-          font-size: 24px;
-          font-weight: bold;
-          text-transform: capitalize;
-          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-          z-index: 2;
-      }
-      
-      .card-type {
-          position: absolute;
-          bottom: 90px;
-          left: 25px;
-          color: #fff;
-          font-size: 16px;
-          font-weight: bold;
-          border-radius: 10px;
-          padding: 5px;
-          margin-top: 10px;
-          z-index: 2;
-      }
-      
-      .card-id {
-          position: absolute;
-          bottom: 25px;
-          left: 25px;
-          color: #000;
-          font-size: 14px;
-          font-weight: bold;
-          z-index: 2;
-      }
-      
-      .card-stats {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-between;
-          margin-top: 50px;
-          position: absolute;
-          bottom: 25px;
-          right: 25px;
-      }
-      
-      .card-stats .stat {
-          width: 80px;
-          height: 60px;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          background-color: #fff;
-          border-radius: 10px;
-          border: 1px solid #000;
-      }
-      
-      .card-stats .stat-value {
-          font-size: 20px;
-          font-weight: bold;
-      }
-      
-      .card-stats .stat-label {
-          font-size: 14px;
-          text-transform: capitalize;
-      }
-      
-      .footer {
-          background-color: #d04d07;
-          color: #fff;
-          text-align: center;
-          padding: 10px;
-          position: fixed;
-          left: 0;
-          bottom: 0;
-          width: 100%;
-          min-height: 50px;
-      }
-      
-      .footer_container {
-          max-width: 1500px;
-          margin: auto;
-          padding: 20px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          flex-wrap: wrap-reverse;
-      }
-      
-      h1 {
-          font-size: 40px;
-          color: #fff;
-          font-weight: bold;
-      }
-      
-      h1 {
-          position: relative;
-          padding: 150px;
-          margin: 0;
-          font-family: "Raleway", sans-serif;
-          font-weight: 80px;
-          font-size: 80px;
-          color: #cb5d08;
-          -webkit-transition: all 0.4s ease 0s;
-          -o-transition: all 0.4s ease 0s;
-          transition: all 0.4s ease 0s;
-      }
-      
-      h1 span {
-          display: block;
-          font-size: 0.5em;
-          line-height: 1.3;
-      }
-      
-      h1 em {
-          font-style: normal;
-          font-weight: 600;
-      }
-      
-      .one h1 {
-          text-align: center;
-          text-transform: uppercase;
-          padding-bottom: 5px;
-      }
-      
-      .one h1:before {
-          width: 28px;
-          height: 5px;
-          display: block;
-          content: "";
-          position: absolute;
-          bottom: 3px;
-          left: 50%;
-          margin-left: -14px;
-          background-color: #b80000;
-      }
-      
-      .one h1:after {
-          width: 100px;
-          height: 1px;
-          display: block;
-          content: "";
-          position: relative;
-          margin-top: 25px;
-          left: 50%;
-          margin-left: -50px;
-          background-color: #b80000;
-      }
-      
-      .footer {
-          background-color: #da7139;
-          color: #fff;
-          padding: 20px;
-          max-width: 100%;
-          z-index: 2;
-      }
-      
-      .footer a {
-          color: #fff;
-      }
-      
-      .footer a:hover,
-      .footer a:focus {
-          color: #f5f5f5;
-          text-decoration: underline;
-      }
-      
-      .footer h5 {
-          color: #fff;
-          font-weight: 600;
-      }
-      
-      .footer ul li a {
-          font-size: 16px;
-          font-weight: bold;
-      }
-      
-      .footer ul li a:hover {
-          color: #f5f5f5;
-      }
-      
-      .footer .form-control {
-          background-color: #fff;
-          color: #333;
-          border-radius: 0;
-          border: none;
-      }
-      
-      .footer .form-control:focus {
-          border-color: #333;
-          box-shadow: none;
-      }
-      
-      .footer button {
-          background-color: #fff;
-          border-color: transparent;
-          color: #333;
-          border-radius: 0;
-      }
-      
-      .footer button:hover {
-          background-color: #333;
-          color: #fff;
-          border-color: transparent;
-      }
+      .container {
+      max-width: 100%;
+      margin: 0 auto;
+      padding: 0 20px;
+  }
+  
+  .region-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 100vh;
+      border-radius: 25px;
+      padding: px;
+      margin: 50px auto;
+  }
+  
+  .region-button {
+      padding: 10px;
+      height: 40px;
+      width: 120px;
+      border: 2px solid #ffcb05;
+      border-radius: 30px;
+      background-color: #fff;
+      color: #ffcb05;
+      font-weight: bold;
+      font-size: 16px;
+      text-transform: uppercase;
+      transition: all 0.3s ease-in-out;
+  }
+  
+  .region-button:hover {
+      background-color: #ffcb05;
+      color: #fff;
+  }
+  
+  .region {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 20px;
+      position: relative;
+  }
+  
+  .region img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+  }
+  
+  .region img:hover {
+      transform: scale(1.2);
+  }
+  
+  #main-navbar #active-link {
+      color: white;
+  }
+  
+  #hamburger-menu {
+      top: 0px;
+      width: 100%;
+      position: fixed;
+      background-color: #d04d07;
+      z-index: 10;
+      padding-bottom: 10px;
+      padding-top: 10px;
+  }
+  
+  #main-navbar {
+      display: none;
+      padding: 10px 20px;
+      border-top: 1px solid #bb0b0b;
+      background-position: center;
+      background-size: 80%;
+      background-repeat: no-repeat;
+  }
+  
+  #main-navbar li {
+      margin: 10px 0px;
+      padding: 10px 0px;
+      border-bottom: 1px solid #f00909;
+      list-style: none;
+  }
+  
+  #main-navbar li a {
+      color: #731313;
+      text-decoration: none;
+      font-size: 1.4rem;
+  }
+  
+  #main-navbar li a:hover {
+      color: white;
+      transition: .3s ease-in;
+  }
+  
+  .line1,
+  .line2,
+  .line3 {
+      width: 24px;
+      height: 3px;
+      background-color: #ab0b0b;
+      margin: 0px 0px 4px 10px;
+  }
+  
+  .line1.active {
+      transform: rotate(-45deg) translate(-5px, 5px);
+  }
+  
+  .line2.active {
+      opacity: 0;
+  }
+  
+  .line3.active {
+      transform: rotate(45deg) translate(-5px, -5px);
+  }
+  
+  #main-navbar.menu-active {
+      display: block;
+      height: 100vh;
+      animation-name: drop-menu-animation;
+      animation-delay: 0s;
+      animation-duration: 0.5s;
+  }
+  /* Style for the card container */
+  
+  .ui.cards {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      display: grid;
+  }
+  
+  .card-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 20px;
+      display: grid;
+  }
+  
+  .card-content {
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      background-color: #f5f5f5;
+      border: 1px solid #000;
+      border-radius: 10px;
+      width: 300px;
+      height: 420px;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+      position: relative;
+      overflow: hidden;
+  }
+  
+  .card-content img {
+      width: 150px;
+      height: 150px;
+      margin: 20px auto;
+      display: block;
+      position: relative;
+      z-index: 1;
+      background-color: #eea064;
+      border-radius: 50%;
+  }
+  
+  .card-info {
+      position: absolute;
+      left: 25px;
+      right: 25px;
+      color: #d8500b;
+      font-size: 24px;
+      font-weight: bold;
+      text-transform: capitalize;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      z-index: 2;
+  }
+  
+  .card-type {
+      position: absolute;
+      bottom: 90px;
+      left: 25px;
+      color: #fff;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 10px;
+      padding: 5px;
+      margin-top: 10px;
+      z-index: 2;
+  }
+  
+  .card-id {
+      position: absolute;
+      bottom: 25px;
+      left: 25px;
+      font-size: 14px;
+      font-weight: bold;
+      z-index: 2;
+  }
+  
+  .card-text {
+      background-color: #eda378;
+      padding: 3px;
+      list-style-type: disc;
+      margin-block-start: 1em;
+      margin-block-end: 1em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+      padding-inline-start: 20px;
+  }
+  
+  .card-title {
+      background-color: #eda378;
+      padding: 3px;
+  }
+  
+  .footer {
+      background-color: #d04d07;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      min-height: 50px;
+  }
+  
+  .footer_container {
+      max-width: 1500px;
+      margin: auto;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap-reverse;
+  }
+  
+  h1 {
+      font-size: 40px;
+      color: #fff;
+      font-weight: bold;
+  }
+  
+  h1 {
+      position: relative;
+      padding: 150px;
+      margin: 0;
+      font-family: "Raleway", sans-serif;
+      font-weight: 80px;
+      font-size: 80px;
+      color: #cb5d08;
+      -webkit-transition: all 0.4s ease 0s;
+      -o-transition: all 0.4s ease 0s;
+      transition: all 0.4s ease 0s;
+  }
+  
+  h1 span {
+      display: block;
+      font-size: 0.5em;
+      line-height: 1.3;
+  }
+  
+  h1 em {
+      font-style: normal;
+      font-weight: 600;
+  }
+  
+  .one h1 {
+      text-align: center;
+      text-transform: uppercase;
+      padding-bottom: 5px;
+  }
+  
+  .one h1:before {
+      width: 28px;
+      height: 5px;
+      display: block;
+      content: "";
+      position: absolute;
+      bottom: 3px;
+      left: 50%;
+      margin-left: -14px;
+      background-color: #b80000;
+  }
+  
+  .one h1:after {
+      width: 100px;
+      height: 1px;
+      display: block;
+      content: "";
+      position: relative;
+      margin-top: 25px;
+      left: 50%;
+      margin-left: -50px;
+      background-color: #b80000;
+  }
+  
+  .footer {
+      background-color: #da7139;
+      color: #fff;
+      padding: 20px;
+      max-width: 100%;
+      z-index: 2;
+  }
+  
+  .footer a {
+      color: #fff;
+  }
+  
+  .footer a:hover,
+  .footer a:focus {
+      color: #f5f5f5;
+      text-decoration: underline;
+  }
+  
+  .footer h5 {
+      color: #fff;
+      font-weight: 600;
+  }
+  
+  .footer ul li a {
+      font-size: 16px;
+      font-weight: bold;
+  }
+  
+  .footer ul li a:hover {
+      color: #f5f5f5;
+  }
+  
+  .footer .form-control {
+      background-color: #fff;
+      color: #333;
+      border-radius: 0;
+      border: none;
+  }
+  
+  .footer .form-control:focus {
+      border-color: #333;
+      box-shadow: none;
+  }
+  
+  .footer button {
+      background-color: #fff;
+      border-color: transparent;
+      color: #333;
+      border-radius: 0;
+  }
+  
+  .footer button:hover {
+      background-color: #333;
+      color: #fff;
+      border-color: transparent;
+  }
